--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
+eventlet==0.18.4
 Flask==0.10.1
-Flask-SocketIO==0.3.0
-Jinja2==2.7.2
-MarkupSafe==0.19
-Werkzeug==0.9.4
-gevent==1.0
-gevent-socketio==0.3.6
-gevent-websocket==0.9.3
-greenlet==0.4.2
-itsdangerous==0.23
-pyepics==3.2.1
-wsgiref==0.1.2
+Flask-SocketIO==2.2
+greenlet==0.4.9
+itsdangerous==0.24
+Jinja2==2.8
+MarkupSafe==0.23
+pyepics==3.2.4
+python-engineio==0.9.0
+python-socketio==1.2
+six==1.10.0
+Werkzeug==0.11.8
